attached_assets/Pasted--workspace-pytest-v-ImportError-while-loading-conftest-home-runner-workspace-tests-conftest-py-1756098025881_1756098025883.txt
~/workspace$ pytest -v
ImportError while loading conftest '/home/runner/workspace/tests/conftest.py'.
tests/conftest.py:14: in <module>
    from src.storage.json_saver import JSONSaver
E   ModuleNotFoundError: No module named 'src.storage.json_saver'
~/workspace$ pytest -v
================================ test session starts ================================
platform linux -- Python 3.11.13, pytest-8.4.1, pluggy-1.6.0 -- /nix/store/2lcqw1d28vklbk8ikiwad28iq2smwndv-python-wrapped-0.1.0/bin/python3
cachedir: .pytest_cache
rootdir: /home/runner/workspace
configfile: pyproject.toml
plugins: cov-6.2.1, mock-3.14.1
collected 106 items / 3 errors                                                      

====================================== ERRORS =======================================
_______________________ ERROR collecting tests/test_cache.py ________________________
ImportError while importing test module '/home/runner/workspace/tests/test_cache.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/test_cache.py:10: in <module>
    from src.utils.cache import CacheManager
E   ImportError: cannot import name 'CacheManager' from 'src.utils.cache' (/home/runner/workspace/src/utils/cache.py)
____________________ ERROR collecting tests/test_integration.py _____________________
ImportError while importing test module '/home/runner/workspace/tests/test_integration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/test_integration.py:10: in <module>
    from src.api_modules.hh_api import HHApi
E   ImportError: cannot import name 'HHApi' from 'src.api_modules.hh_api' (/home/runner/workspace/src/api_modules/hh_api.py)
______________________ ERROR collecting tests/test_storage.py _______________________
.pythonlibs/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.pythonlibs/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/runner/workspace/tests/test_storage.py", line 18
E       assert saver is not Nonecancies.models import Vacancy
E                                              ^^^^^^
E   SyntaxError: invalid syntax
============================== short test summary info ==============================
ERROR tests/test_cache.py
ERROR tests/test_integration.py
ERROR tests/test_storage.py
!!!!!!!!!!!!!!!!!!!!!! Interrupted: 3 errors during collection !!!!!!!!!!!!!!!!!!!!!